Bug#33141 - Get rid of DATABASE column in INFORMATION_SCHEMA talbes; FALCON_TRANSACTIONS, FALCON_TRANSACTION_SUMMARY & FALCON_SERIAL_LOG_INFO. In FALCON_TRANSACTIONS, add a 'State' column and don't show the transaction objects that are empty and available for reuse.